k8s/qa/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: qa
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: karanam09/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000

          livenessProbe:
            httpGet:
              path: /api/data
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /api/data
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
